# BoAaP

./: README.md
lab11/: CMakeLists.txt  data.txt  main.c  result.html  text_processor.c  text_processor.h
lab12/: CMakeLists.txt  animal.c  animal.h  animals.txt  main.c  results.txt
lab13/: CMakeLists.txt  examples.txt  main.c  my_string.c  my_string.h
lab2/: CMakeLists.txt  house.c  house.h  main.c  scene.c  scene.h  vw_logo.c  vw_logo.h
lab3/: CMakeLists.txt  approx_curve.c  bezier_curve.c  bezier_curve.h  main.c
lab5/: CMakeLists.txt  main.c
lab6/: CMakeLists.txt  array_logic.c  array_logic.h  main.c  visual.c  visual.h
lab7/: CMakeLists.txt  array_functions.h  array_input.c  array_output.c  array_update.c  example.txt  main.c
lab8/: CMakeLists.txt  array_functions.h  array_input.c  array_output.c  array_update.c  data.txt  main.c  result.txt
lab9/: CMakeLists.txt  data.txt  main.c  matrix_logic.c  matrix_logic.h  matrix_visuals.c
